# examples

./: .gitignore  Cargo.toml  README.md
snippets/: Cargo.toml
snippets/examples/: code-block.rs  comment.rs  component.rs  escaping.rs  for.rs  functions.rs  if-else.rs  include.rs  layout.rs  match.rs  parantheses-expression.rs  raw-block.rs  simple-expression.rs  while.rs
snippets/src/: main.rs
snippets/views/: Card.rs.html  Item.rs.html  Navbar.rs.html  SideBar.rs.html  code_block.rs.html  component.rs.html  extends.rs.html
webapp/: Cargo.toml
webapp/src/: main.rs
webapp/views/: index.rs.html  layout.rs.html  scripts.rs.html
webapp/views/components/: About.rs.html  Contact.rs.html  Home.rs.html  Navbar.rs.html  Services.rs.html
