[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
rshtml.workspace = true
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["fs"] }
chrono = "0.4.41"

[build-dependencies]
rshtml.workspace = true
